cxx/pip_boy/include/fwwasm.h

void setControlValueMinMaxF(int iPanelIndex, int iControlIndex, int bEnableMinMax, float iMinF, float iMaxF)
    WASM_IMPORT("setControlValueMinMaxF");  // implemented
void setLogDataText(int iLogIndex, const char *szText) WASM_IMPORT("setLogDataText");                    // implemented
void setPlotData(int iPlotData, int iSettings, int iNewValue) WASM_IMPORT("setPlotData");                // implemented
void setControlValue(int iPanelIndex, int iControlIndex, int iNewValue) WASM_IMPORT("setControlValue");  // tested
void setControlValueFloat(int iPanelIndex, int iControlIndex, float fNewValue)
    WASM_IMPORT("setControlValueFloat");  // implemented
void showPanel(int iPanel) WASM_IMPORT("showPanel");  // tested
// Sensors
void setAudioSettings(int bStreamMic, int bStreamFFT, int bEnableMicPlotData, int iMICPlotDataIndex,
                      int bEnableFFTPlotData, int iFFTPlotDataIndex) WASM_IMPORT("setAudioSettings");  // implemented
// fpga
int loadFPGAFromFile(char *szFilePath) WASM_IMPORT("loadFPGAFromFile");  // implemented
void setAppLogSettings(int bLogIRCodes, int bLogAccel, int bLogTempC, int bLogTempF, int iLogIndex)
    WASM_IMPORT("setAppLogSettings");