rust/rainbow_led/src/fwwasm.rs

#[link(wasm_import_module = "wiliwasm")]
extern "C" {
    pub fn setControlValueMinMaxF(
        iPanelIndex: ::core::ffi::c_int,
        iControlIndex: ::core::ffi::c_int,
        bEnableMinMax: bool,
        iMinF: f32,
        iMaxF: f32,
    );
}
#[link(wasm_import_module = "wiliwasm")]
extern "C" {
    pub fn setLogDataText(iLogIndex: ::core::ffi::c_int, szText: *const ::core::ffi::c_char);
}
#[link(wasm_import_module = "wiliwasm")]
extern "C" {
    pub fn setPlotData(
        iPlotData: ::core::ffi::c_int,
        iSettings: ::core::ffi::c_int,
        iNewValue: ::core::ffi::c_int,
    );
}
#[link(wasm_import_module = "wiliwasm")]
extern "C" {
    pub fn setControlValue(
        iPanelIndex: ::core::ffi::c_int,
        iControlIndex: ::core::ffi::c_int,
        iNewValue: ::core::ffi::c_int,
    );
}
#[link(wasm_import_module = "wiliwasm")]
extern "C" {
    pub fn setControlValueFloat(
        iPanelIndex: ::core::ffi::c_int,
        iControlIndex: ::core::ffi::c_int,
        fNewValue: f32,
    );
}
#[link(wasm_import_module = "wiliwasm")]
extern "C" {
    pub fn setAudioSettings(
        bStreamMic: bool,
        bStreamFFT: bool,
        bEnableMicPlotData: bool,
        iMICPlotDataIndex: ::core::ffi::c_int,
        bEnableFFTPlotData: bool,
        iFFTPlotDataIndex: ::core::ffi::c_int,
    );
}
#[link(wasm_import_module = "wiliwasm")]
extern "C" {
    pub fn setAppLogSettings(bLogIRCodes: bool, iLogIndex: ::core::ffi::c_int);
}
#[link(wasm_import_module = "wiliwasm")]
extern "C" {
    pub fn setIODirections(
        iIODirections: ::core::ffi::c_int,
        bEnableI2CPullups: bool,
        iAntennaRadio1: ::core::ffi::c_int,
        iAntennaRadio2: ::core::ffi::c_int,
        bEnableIOConfig: bool,
    );
}
#[link(wasm_import_module = "wiliwasm")]
extern "C" {
    pub fn showPanel(iPanel: ::core::ffi::c_int);
}
#[link(wasm_import_module = "wiliwasm")]
extern "C" {
    pub fn showMsgBox(
        szMessage: *mut ::core::ffi::c_char,
        bShowOk: bool,
        bShowOkCancel: bool,
        bShowYesNo: bool,
        iPictureIndex: ::core::ffi::c_int,
        iAutoCloseHalfSec: ::core::ffi::c_int,
    );
}
#[link(wasm_import_module = "wiliwasm")]
extern "C" {
    pub fn showProgressBar(
        szMessage: *mut ::core::ffi::c_char,
        iPictureIndex: ::core::ffi::c_int,
        iValue0to100: ::core::ffi::c_int,
        bShowOkToClose: bool,
    );
}
#[link(wasm_import_module = "wiliwasm")]
extern "C" {
    pub fn showNumEdit(
        szMessage: *mut ::core::ffi::c_char,
        bUnsigned: bool,
        bHexFormat: bool,
        bUseMinMax: bool,
        iInitalValue: ::core::ffi::c_int,
        iMin: ::core::ffi::c_int,
        iMax: ::core::ffi::c_int,
    );
}
#[link(wasm_import_module = "wiliwasm")]
extern "C" {
    pub fn showNumEditFloat(
        szMessage: *mut ::core::ffi::c_char,
        iFoatDigits: ::core::ffi::c_int,
        bUseMinMax: bool,
        fInitalValue: f32,
        fMin: ::core::ffi::c_int,
        fMax: ::core::ffi::c_int,
    );
}
#[link(wasm_import_module = "wiliwasm")]
extern "C" {
    pub fn showTextEdit(
        szMessage: *mut ::core::ffi::c_char,
        szInitialValue: *mut ::core::ffi::c_char,
    );
}
#[link(wasm_import_module = "wiliwasm")]
extern "C" {
    pub fn showPickList(szMessage: *mut ::core::ffi::c_char, iDefaultItem: ::core::ffi::c_int);
}
#[link(wasm_import_module = "wiliwasm")]
extern "C" {
    pub fn loadFPGAFromFile();
}
